--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a href="https://omnatigray.org/"
           ><img
             class="image1"
-            src="./assets/images/Calculator.jpeg"
+            src="./Assets/images/Calculator.jpeg"
             alt="Calculator application"
         /></a>
       </div>
@@ -56,7 +56,7 @@
         <a href="https://tigrayyouthnetwork.org/">
           <img
             class="image2"
-            src="./assets/images/toDo.png"
+            src="./Assets/images/toDo.png"
             alt="To-do list application"
         /></a>
       </div>
@@ -68,7 +68,7 @@
         >
           <img
             class="image3"
-            src="./assets/images/banking.png"
+            src="./Assets/images/banking.png"
             alt="Bankingapp"
         /></a>
       </div>
@@ -83,7 +83,7 @@
         <div class="details footer"><p>Contact me</p></div>
         <img
           class="myImage"
-          src="./assets/images/D209283F-9E23-465E-BF5F-05F61880D9CE.jpg"
+          src="./Assets/images/D209283F-9E23-465E-BF5F-05F61880D9CE.jpg"
           alt="Micheale's Photograph"
         />
 
